--- a/assets/styles/sass/_site-wide.scss
+++ b/assets/styles/sass/_site-wide.scss
@@ -68,7 +68,8 @@ nav {
 }
 
 .down {
-	bottom: 0;
+//	bottom: 0;
+	bottom: -5%;
 	background-position: center bottom;
 }
 
