--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -809,7 +809,7 @@ nav {
   width: 100%;
   height: 100%;
   min-width: 960px;
-  min-height: 760px;
+  min-height: 450px;
   top: 0;
   left: 0;
 }
@@ -861,31 +861,31 @@ nav {
 
 /* line 70, sass/_site-wide.scss */
 .down {
-  bottom: 0;
+  bottom: -5%;
   background-position: center bottom;
 }
 
-/* line 76, sass/_site-wide.scss */
+/* line 77, sass/_site-wide.scss */
 .right,
 .left {
   width: 50%;
   height: 100%;
 }
 
-/* line 82, sass/_site-wide.scss */
+/* line 83, sass/_site-wide.scss */
 .right {
   right: 0;
 }
-/* line 84, sass/_site-wide.scss */
+/* line 85, sass/_site-wide.scss */
 .right img {
   margin-left: 70%;
 }
 
-/* line 90, sass/_site-wide.scss */
+/* line 91, sass/_site-wide.scss */
 .left {
   left: 0;
 }
-/* line 92, sass/_site-wide.scss */
+/* line 93, sass/_site-wide.scss */
 .left img {
   float: right;
   margin-right: 70%;
@@ -911,7 +911,7 @@ nav {
 .container {
   width: 100%;
   min-width: 960px;
-  min-height: 760px;
+  min-height: 450px;
   overflow: hidden;
   /*opacity: 1; */
   /* page is hidden at first so jQuery mangagePageLoad can set
@@ -962,7 +962,7 @@ nav {
   width: 100%;
   height: 98%;
   min-width: 960px;
-  min-height: 760px;
+  min-height: 450px;
   background: rgba(255, 255, 255, 0.85);
   -webkit-box-shadow: black 2px 2px 10px;
   -moz-box-shadow: black 2px 2px 10px;
@@ -1059,7 +1059,7 @@ nav {
 .main-frame {
   position: relative;
   width: 66.67%;
-  height: 65%;
+  height: 60%;
   margin: 0 auto;
 }
 /* line 153, sass/_layouts.scss */
@@ -1087,6 +1087,7 @@ nav {
   top: 100%;
   margin: 0 auto;
   padding: 5px 0;
+  background: #fbfaf8;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   -webkit-transition-property: opacity;
@@ -1098,14 +1099,14 @@ nav {
   -o-transition-duration: 1s;
   transition-duration: 1s;
 }
-/* line 186, sass/_layouts.scss */
+/* line 187, sass/_layouts.scss */
 .main-frame .option .project-title {
   font-size: 12px;
   line-height: 24px;
   margin: 0;
   font-weight: normal;
 }
-/* line 193, sass/_layouts.scss */
+/* line 194, sass/_layouts.scss */
 .main-frame .option .description {
   max-width: 600px;
   margin: 0 auto;
@@ -1114,22 +1115,22 @@ nav {
   text-align: center;
   font-weight: normal;
 }
-/* line 203, sass/_layouts.scss */
+/* line 204, sass/_layouts.scss */
 .main-frame .option.left {
   top: 0;
   left: -3000px;
 }
-/* line 207, sass/_layouts.scss */
+/* line 208, sass/_layouts.scss */
 .main-frame .option.right {
   top: 0;
   left: 3000px;
 }
-/* line 211, sass/_layouts.scss */
+/* line 212, sass/_layouts.scss */
 .main-frame .option.up {
   top: -3000px;
   left: 0;
 }
-/* line 215, sass/_layouts.scss */
+/* line 216, sass/_layouts.scss */
 .main-frame .option.down {
   top: 3000px;
   left: 0;
